--- a/src/App.scss
+++ b/src/App.scss
@@ -2,8 +2,34 @@
   margin: 0 auto;
   height: 100vh;
   background: linear-gradient(135deg, lightblue, pink);
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
+
+  .card {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+
+    &__option {
+      display: flex;
+      flex-direction: column;
+
+      &--row {
+        display: flex;
+        flex-direction: row;
+      }
+    }
+
+    &__deck {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+    }
+  }
+
+  .score {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
 }
