--- a/src/App.scss
+++ b/src/App.scss
@@ -23,6 +23,11 @@
       display: flex;
       flex-direction: column;
       justify-content: space-around;
+
+      &--graveyard {
+        border: 5px solid aqua;
+        border-radius: 20px;
+      }
     }
   }
 
