dodane karte kako triba i dodana neka stanja

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,7 @@
   height: 100vh;
   background: linear-gradient(135deg, lightblue, pink);
 
-  .card {
+  .mojCard {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
